--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-lol
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Häsemeyer</title>
+        <link href="./assets/pfp.png" type="image/x-icon" rel="icon">
+        <link href="style.css" rel="stylesheet">
+    </head>
+    
+    <body>
+
+        lol
+
+    </body>
+</html>
