--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Häsemeyer</title>
-        <link href="./assets/pfp.png" type="image/x-icon" rel="icon">
-        <link href="style.css" rel="stylesheet">
+        <meta http-equiv="refresh" content="0; url=https://blenny-catfish.ts.net/" />
     </head>
-    
     <body>
-
-        lol
-
+        <a href="blenny-catfish.ts.net">redirect</a>
     </body>
 </html>
