--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://blenny-catfish.ts.net/" />
+        <meta http-equiv="refresh" content="0; url=https://raspi.blenny-catfish.ts.net/" />
     </head>
     <body>
-        <a href="blenny-catfish.ts.net">redirect</a>
+        <a href="https://raspi.blenny-catfish.ts.net">redirect</a>
     </body>
 </html>
